# enduro_app

./: .flake8  .gitignore  Makefile  README.md  base-pyproject.toml  docker-compose.yml  lefthook.yml  pyproject.toml
admin/: admin-pyproject.toml  pyproject.toml
admin/app/: manage.py  wsgi.py
admin/app/core/accounts/: apps.py  forms.py  urls.py  utils.py  views.py
admin/app/infra/: asgi.py  settings.py  urls.py
admin/app/infra/.envs/: .env.ci.runtests  .env.local.runtests  .env.local.template
admin/app/infra/conf/: auth.py  boilerplate.py  db.py  development.py  email.py  environ.py  http.py  i18n.py  installed_apps.py  logging.py  sentry.py  static.py  storage.py  templates.py
admin/app/infra/management/commands/: makemigrations.py
admin/app/tests/: conftest.py
admin/app/tests/integration/: utils.py
admin/app/tests/integration/factories/: user_factories.py
admin/app/tests/integration/users/: test_admin.py
admin/docker/: Dockerfile  docker-entrypoint.sh
admin/docs/: testing.md
admin/tests/: conftest.py
admin/tests/integration/users/: test_admin.py
api/settings/: config.py
api/tests/: conftest.py
docs/development/: dependencies.md
settings/environments/: .env.local.runtests
