[dependency-groups]
dev = [ "toml-union>=1.0.4", "black>=25.11", "flake8>=7.3", "lefthook>=2.0", "mypy>=1.19", "ruff>=0.14", "types-bleach>=6.2.0.20250809", "types-python-dateutil>=2.9.0.20250516", "uuid-utils>=0.11.0", "nplusone>=1.0", "django-debug-toolbar>=5.2", "django-querycount>=0.8", "pytest-django>=4.11", "django-webtest>=1.9",]

[project]
authors = [ "Dmitry Afanasiev <balshbox@mail.ru>",]
dependencies = [ "django>=5.2", "django-split-settings>=1.3", "django-environ>=0.12", "psycopg2-binary>=2.9", "django-stubs>=5.2", "django-storages>=1.14", "django-object-actions>=5.0", "structlog>=25.5", "types-python-dateutil>=2.9", "tenacity>=9.1", "types-requests>=2.32", "requests>=2.32", "django-admin-inline-paginator>=0.4.0", "django-admin-extra-buttons>=1.6.0", "django-admin-rangefilter>=0.13.2", "django-admin-list-filters>=1.3.1", "django-import-export>=3.3.9",]
description = [ "App for register MTB enduro challenges base", "Enduro challenges admin",]
name = "enduro_app"
requires-python = ">=3.14"
version = "0.1.0"

[tool.black]
line-length = 120
target-version = [ "py314",]

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
exclude = [ ".venv",]
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
namespace_packages = true
no_implicit_optional = true
python_version = "3.14"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
output-format = "concise"

[tool.ruff.lint]
extend-select = [ "F", "I", "PL", "E", "W", "C4", "PT", "B", "T10", "SIM", "TID", "T20", "PGH", "S", "RET", "ERA", "PIE", "UP", "ASYNC", "ISC", "PERF", "DTZ", "TRY", "C90",]
ignore = [ "S105", "S106", "S324", "PGH003", "TRY003", "TRY004", "PT001", "PT023", "ASYNC109", "PLR0912", "PLC0206",]

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = [ "S101", "PLR2004", "PLR0913",]

[tool.ruff.lint.pylint]
max-args = 15
max-statements = 50
